--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 
 before_script: pip install docker-compose
 script:
-  - dockker-compose run app sh -c "python manage.py test && flake8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
